[project]
name = "filetolink-api"
version = "1.0.0"
description = "High-performance Telegram file to direct link streaming API with multi-platform support"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "uvloop",
    "telethon",
    "cryptg",
    "jinja2",
]

[project.scripts]
app = "api:app"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = ["templates*", "static*", "assets*", "frontend*", "tests*", "__pycache__*"]